WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251590
[css-properties-values-api] non-inherited custom property fails to inherit from parent when "inherit" is set
https://bugs.webkit.org/show_bug.cgi?id=251590
Summary
[css-properties-values-api] non-inherited custom property fails to inherit fr...
Antoine Quint
Reported
2023-02-02 08:17:50 PST
This fails: <div style="--foo: 100px"> <div style="--foo: inherit"></div> </div> The value for --foo on the child is the initial value for that custom property rather than its parent's value.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2023-02-02 08:20:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9522
Antoine Quint
Comment 2
2023-02-02 08:40:55 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/38330
EWS
Comment 3
2023-02-03 02:06:26 PST
Committed
259809@main
(06e3540a49d0): <
https://commits.webkit.org/259809@main
> Reviewed commits have been landed. Closing PR #9522 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-02-03 02:07:37 PST
<
rdar://problem/104998661
>
EWS
Comment 5
2023-02-10 16:12:43 PST
Committed
259548.78@safari-7615-branch
(a4202f6cb63a): <
https://commits.webkit.org/259548.78@safari-7615-branch
> Reviewed commits have been landed. Closing PR #379 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug