Cherry-pick 06e3540a49d0. rdar://problem/104998661

[css-properties-values-api] non-inherited custom property fails to inherit from parent when "inherit" is set
    https://bugs.webkit.org/show_bug.cgi?id=251590

    Reviewed by Antti Koivisto.

    We would only look at the map of inherited custom properties when applying the "inherit" value
    for a custom property. However, a non-inherited value should also use its parent's value in that
    case.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/registered-properties-inheritance-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/registered-properties-inheritance.html:
    * Source/WebCore/style/StyleBuilderCustom.h:
    (WebCore::Style::BuilderCustom::applyInheritCustomProperty):

    Canonical link: https://commits.webkit.org/259809@main

Canonical link: https://commits.webkit.org/259548.160@safari-7615-branch